[AUTHENTICATION AND POSTS] - ADD redirect route  upon successful post creation

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,6 +12,6 @@
   </p>
  
   <p>
-    <%= f.submit, "Post Article" class: "btn btn-primary"%>
+    <%= f.submit "Post Article"%>
   </p>
 <% end %>
