--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,18 +5,16 @@
   <tr>
     <th>Title</th>
     <th>Content</th>
-    <th>  </th>
-
-    
+    <th>Author</th>
   </tr>
  
   <% @posts.each do |post| %>
     <tr>
       <td><%= post.title %></td>
-      <td><%= post.text %></td>
-      <%= if logged_in? %> 
-      <td><%= link_to user.name, user %></td>
+      <% if logged_in? %> 
+      <td><%= post.user.name %></td>
       <% end %>
+      <td><%= post.content %></td>
     </tr>
   <% end %>
 </table>
