--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -32,5 +32,5 @@
   <br>
   <%= link_to "Create a Post", new_post_url %>
 <% else %>
-  <%= link_to "Sign in", login_path %>
+  <p>Have an account? <%= link_to "Sign in here!", login_path %></p>
 <% end %>
