--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,22 @@
 <h1>Sign up</h1>
 
-<%= form_for(@user, url: users_path(@user), html: { method: :post }) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
-  <%= f.label :email %>
-  <%= f.email_field :email %>
-      
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-      
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+      <%= f.label :email %>
+      <%= f.email_field :email %>
 
+      <%= f.label :password %>
+      <%= f.password_field :password %>
 
-  <%= f.submit "Sign up"%>
-<% end %>
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+    <p>Have an account? <%= link_to "Sign in here!", login_path %></p>
+  </div>
+</div>
