[AUTHENTICATION AND POSTS] - FIX Remember Me Log In Not Working

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,7 +28,7 @@
 </table>
 
 <% if logged_in? %>
-  <%= link_to "Sign out", log_out %>
+  <%= link_to "Sign out", logout_path %>
   <br>
   <%= link_to "Create a Post", new_post_url %>
 <% else %>
